concord_macros/tests/trybuild/fail/pagination/non_paginated_paginate.stderr
error[E0277]: the trait bound `EpPingHe9bee119c6a37b89: PaginatedEndpoint<UsageNonPaginatedApiCx>` is not satisfied
  --> tests/trybuild/fail/pagination/non_paginated_paginate.rs:18:10
   |
18 |         .paginate(PaginationTermination::hard_page_cap(1))
   |          ^^^^^^^^ unsatisfied trait bound
   |
help: the trait `PaginatedEndpoint<UsageNonPaginatedApiCx>` is not implemented for `EpPingHe9bee119c6a37b89`
  --> tests/trybuild/fail/pagination/non_paginated_paginate.rs:5:1
   |
 5 | / api! {
 6 | |     client UsageNonPaginatedApi {
 7 | |         base "https://example.com"
...  |
10 | |     GET Ping
   | |____________^
note: required by a bound in `PendingRequest::<'a, Cx, E, T>::paginate`
  --> $WORKSPACE/concord_core/src/request.rs
   |
   |     pub fn paginate(self, termination: PaginationTermination) -> PaginatedRequest<'a, Cx, E, T>
   |            -------- required by a bound in this associated function
   |     where
   |         E: PaginatedEndpoint<Cx>,
   |            ^^^^^^^^^^^^^^^^^^^^^ required by this bound in `PendingRequest::<'a, Cx, E, T>::paginate`
   = note: this error originates in the macro `api` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `EpPingHe9bee119c6a37b89: PaginatedEndpoint<UsageNonPaginatedApiCx>` is not satisfied
  --> tests/trybuild/fail/pagination/non_paginated_paginate.rs:19:10
   |
19 |         .collect()
   |          ^^^^^^^ unsatisfied trait bound
   |
help: the trait `PaginatedEndpoint<UsageNonPaginatedApiCx>` is not implemented for `EpPingHe9bee119c6a37b89`
  --> tests/trybuild/fail/pagination/non_paginated_paginate.rs:5:1
   |
 5 | / api! {
 6 | |     client UsageNonPaginatedApi {
 7 | |         base "https://example.com"
...  |
10 | |     GET Ping
   | |____________^
note: required by a bound in `PaginatedRequest::<'a, Cx, E, T>::collect`
  --> $WORKSPACE/concord_core/src/request.rs
   |
   |     pub async fn collect(self) -> Result<Vec<<E::Response as PageItems>::Item>, ApiClientError>
   |                  ------- required by a bound in this associated function
   |     where
   |         E: PaginatedEndpoint<Cx>,
   |            ^^^^^^^^^^^^^^^^^^^^^ required by this bound in `PaginatedRequest::<'a, Cx, E, T>::collect`
   = note: this error originates in the macro `api` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `EpPingHe9bee119c6a37b89: PaginatedEndpoint<UsageNonPaginatedApiCx>` is not satisfied
  --> tests/trybuild/fail/pagination/non_paginated_paginate.rs:16:13
   |
16 |       let _ = api
   |  _____________^
17 | |         .ping()
18 | |         .paginate(PaginationTermination::hard_page_cap(1))
19 | |         .collect()
   | |__________________^ unsatisfied trait bound
   |
help: the trait `PaginatedEndpoint<UsageNonPaginatedApiCx>` is not implemented for `EpPingHe9bee119c6a37b89`
  --> tests/trybuild/fail/pagination/non_paginated_paginate.rs:5:1
   |
 5 | / api! {
 6 | |     client UsageNonPaginatedApi {
 7 | |         base "https://example.com"
...  |
10 | |     GET Ping
   | |____________^
note: required by a bound in `PaginatedRequest::<'a, Cx, E, T>::collect`
  --> $WORKSPACE/concord_core/src/request.rs
   |
   |     pub async fn collect(self) -> Result<Vec<<E::Response as PageItems>::Item>, ApiClientError>
   |                  ------- required by a bound in this associated function
   |     where
   |         E: PaginatedEndpoint<Cx>,
   |            ^^^^^^^^^^^^^^^^^^^^^ required by this bound in `PaginatedRequest::<'a, Cx, E, T>::collect`
   = note: this error originates in the macro `api` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `EpPingHe9bee119c6a37b89: PaginatedEndpoint<UsageNonPaginatedApiCx>` is not satisfied
  --> tests/trybuild/fail/pagination/non_paginated_paginate.rs:20:10
   |
20 |         .await?;
   |          ^^^^^ unsatisfied trait bound
   |
help: the trait `PaginatedEndpoint<UsageNonPaginatedApiCx>` is not implemented for `EpPingHe9bee119c6a37b89`
  --> tests/trybuild/fail/pagination/non_paginated_paginate.rs:5:1
   |
 5 | / api! {
 6 | |     client UsageNonPaginatedApi {
 7 | |         base "https://example.com"
...  |
10 | |     GET Ping
   | |____________^
note: required by a bound in `PaginatedRequest::<'a, Cx, E, T>::collect`
  --> $WORKSPACE/concord_core/src/request.rs
   |
   |     pub async fn collect(self) -> Result<Vec<<E::Response as PageItems>::Item>, ApiClientError>
   |                  ------- required by a bound in this associated function
   |     where
   |         E: PaginatedEndpoint<Cx>,
   |            ^^^^^^^^^^^^^^^^^^^^^ required by this bound in `PaginatedRequest::<'a, Cx, E, T>::collect`
   = note: this error originates in the macro `api` (in Nightly builds, run with -Z macro-backtrace for more info)
